<resources>
    <string name="app_name">Foodíí</string>

    <!-- Activity Login -->
    <string name="text_login">Sign In to Continue</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Sign Up</string>
    <string name="hint_username">User Name</string>
    <string name="desc_image_login">Login Image</string>
    <string name="hint_password">Password</string>
    <!-- Activity Login -->

    <!-- Activity Add_Customer -->
    <string name="add_customer_text_username">User Name</string>
    <string name="add_customer_text_password">Password</string>
    <string name="add_customer_text_first_name">First Name</string>
    <string name="add_customer_text_last_name">Last Name</string>
    <string name="add_customer_text_phone_number">Phone Number</string>
    <string name="btn_customer_list">User List</string>
    <string name="btn_add_customer">Add User</string>
    <!-- Activity Add_Customer -->

    <!-- Activity Edit_Customer -->
    <string name="edit_customer_text_role">Role</string>
    <string name="edit_customer_text_first_name">First Name</string>
    <string name="edit_customer_text_last_name">Last Name</string>
    <string name="edit_customer_text_phone_number">Phone Number</string>
    <string name="edit_customer_text_btn_save">Save</string>
    <string name="edit_customer_text_btn_delete">Delete</string>
    <!-- Activity Edit_Customer -->

    <!-- Full Screen Dialog Edit Item -->
    <string name="full_screen_dialog_edit_item_name">Item Name</string>
    <string name="full_screen_dialog_edit_item_price">Item Price</string>
    <string name="full_screen_dialog_edit_item_quantity">Item Quantity</string>
    <string name="full_screen_dialog_edit_item_supportBar_title">Edit Item Entry</string>
    <string name="full_screen_dialog_btn_update">Update</string>
    <string name="full_screen_dialog_btn_delete">Delete</string>
    <string name="full_screen_dialog_btn_close">Close</string>
    <!-- Full Screen Dialog Edit Item -->

    <!-- Adapter Order Single Item Card -->
    <string name="adapter_order_single_item_name">Item Name</string>
    <string name="adapter_order_single_item_total_price">Total Item Price</string>
    <string name="adapter_order_single_item_total_quantity">Total Quantity</string>
    <string name="adapter_order_single_item_btn_edit">Edit</string>
    <string name="adapter_order_single_item_btn_delete">Delete</string>
    <string name="adapter_order_single_item_image">Item Image</string>
    <!-- Adapter Order Single Item Card -->

    <!-- Adapter Menu Item Card -->
    <string name="adapter_item_menu_item_name">Item Name</string>
    <string name="adapter_item_menu_item_price">Item Price</string>
    <string name="adapter_item_menu_item_quantity">Quantity</string>
    <string name="adapter_item_menu_btn_addToCart">Add</string>
    <!-- Adapter Menu Item Card -->


    <!-- Adapter Menu Item Card -->
    <string name="menu_home">Home</string>
    <string name="menu_foodMenu">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_placeOrder">Place Order</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_cocktails">Cocktails</string>
    <string name="menu_profile">Profile</string>
    <!-- Adapter Menu Item Card -->

</resources>
