<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:cardCornerRadius="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/adapter_order_single_item_image"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/adapter_order_single_item_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/icons8_restaurant" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/adapter_order_single_text_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/adapter_order_single_item_name"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/adapter_order_single_text_total_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/adapter_order_single_item_total_quantity"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/adapter_order_single_text_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/adapter_order_single_item_total_price"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adapter_order_single_btn_edit"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/adapter_order_single_item_btn_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adapter_order_single_btn_delete"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adapter_order_single_item_btn_delete" />
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>